# scientific-visualizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CURRENT_STATUS.md  Cargo.toml  LICENSE  PHASE1_COMPLETE.md  README.md
crates/examples/: Cargo.toml
crates/viz-app/: Cargo.toml
crates/viz-app/src/: main.rs
crates/viz-core/: Cargo.toml
crates/viz-core/src/: lib.rs
crates/viz-core/src/camera/: mod.rs  orbital.rs  orthographic.rs
crates/viz-core/src/color/: colormap.rs  mod.rs  scale.rs
crates/viz-core/src/data/: dataset.rs  mod.rs  point_cloud.rs
crates/viz-core/src/math/: bounds.rs  mod.rs  transform.rs
crates/viz-core/src/renderer/: buffer.rs  context.rs  mod.rs  pipeline.rs  uniforms.rs
crates/viz-core/src/ui/: context.rs  metrics.rs  mod.rs  panels.rs
crates/viz-plots/: Cargo.toml
crates/viz-plots/src/: lib.rs
crates/viz-plots/src/scatter/: mod.rs  scatter3d.rs
crates/viz-wasm/: Cargo.toml
crates/viz-wasm/src/: lib.rs
docs/: ARCHITECTURE.md  ROADMAP.md
shaders/: scatter.wgsl
