[workspace]
resolver = "2"
members = [
    "crates/viz-core",
    "crates/viz-plots",
    "crates/viz-app",
    "crates/viz-wasm",
    "crates/examples",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Scientific Visualizer Contributors"]
license = "MIT"
repository = "https://github.com/yourusername/scientific-visualizer"

[workspace.dependencies]
# Core Graphics & Compute
wgpu = "0.19"
winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.25", features = ["bytemuck"] }
pollster = "0.3"

# UI & Interaction
egui = "0.26"
egui-wgpu = "0.26"
egui-winit = "0.26"
egui_plot = "0.26"

# Data Handling
ndarray = "0.15"
arrow = "50.0"
parquet = "50.0"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async & Performance
tokio = { version = "1.35", features = ["full"] }
rayon = "1.8"
crossbeam = "0.8"
parking_lot = "0.12"

# Math & Algorithms
nalgebra = "0.32"
rand = "0.8"
palette = "0.7"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing & Benchmarking
criterion = "0.5"
approx = "0.5"
proptest = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
