[package]
name = "examples"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "basic_window"
path = "src/bin/basic_window.rs"

[[bin]]
name = "camera_movement"
path = "src/bin/camera_movement.rs"

[[bin]]
name = "scatter_3d"
path = "src/bin/scatter_3d.rs"

[[bin]]
name = "scatter_3d_ui"
path = "src/bin/scatter_3d_ui.rs"

[dependencies]
viz-core = { path = "../viz-core" }
viz-plots = { path = "../viz-plots" }
wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rand = { workspace = true }
