[package]
name = "viz-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "viz-app"
path = "src/main.rs"

[dependencies]
viz-core = { path = "../viz-core" }
viz-plots = { path = "../viz-plots" }

wgpu = { workspace = true }
winit = { workspace = true }
pollster = { workspace = true }

egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
egui_plot = { workspace = true }

csv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

tokio = { workspace = true }
rayon = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
